Refactor risk matching E2E verification
Split Kafka record observation from command-specific verification to make
the E2E verifier responsibilities clearer and easier to maintain.

Introduce immutable byte and observed-record value types so Kafka payload
comparison uses value semantics without exposing mutable byte arrays.

Group verifier arguments and scenario data by artifact, run identity,
service endpoints, execution options, market expectations, and command
identity. This reduces the size and ambiguity of the previous flat data
structures while preserving the existing verification behavior.

Add explicit validation helpers and SpotBugs annotations for immutable
protobuf references so static analysis can distinguish intentional
sharing from representation exposure.

Update the local kind cluster image from Kubernetes 1.34.0 to 1.36.1 and
add the SpotBugs annotations dependency required by the verifier.